--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -4,10 +4,16 @@
     { "email": "john@foo.com", "password": "changeme" }
   ],
 
+  "defaultProfiles": [
+    { "owner": "admin@foo.com", "first": "admin", "last": "admin" },
+    { "owner": "john@foo.com", "first": "John", "last": "Foo", "points": 30 }
+  ],
+
   "defaultData": [
-    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
-    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
-    { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
-    { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+    { "date": "2021-10-29",
+      "description": "I help protect Hawaii's resources by hiking on sanctioned trails and being safe.",
+      "publication": "true",
+      "owner": "john@foo.com",
+      "status": "approved" }
   ]
 }
