--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -28,7 +28,7 @@
     {
       "date": "2021-11-12",
       "title": "Beach Clean Up",
-      "purpose": "To clean up Waikiki beach from all of the wear and tear from tourists.",
+      "purpose": "To clean up Waikiki beach from all of the wear and tear.",
       "instructions": "Come to Waikiki Beach anytime between 8 AM to 2 PM to help pick up trash on the sand and in the ocean.",
       "picture":"https://live.staticflickr.com/82/261202181_290a6c16da_b.jpg",
       "points": 10,
@@ -47,8 +47,8 @@
     },
     {
       "date": "2021-11-14",
-      "title": "Plating Native Trees",
-      "purpose": "To provide prevent trees that are native to Hawaii from going extinct and keep Hawaii's ecosystem balanced.",
+      "title": "Planting Native Trees",
+      "purpose": "To prevent trees that are native to Hawaii from going extinct and keep Hawaii's ecosystem balanced.",
       "instructions": "Come to Aiea Loop Trail anytime between 9 AM to 1 PM to help plant trees with the Department of Land and Natural Resources.",
       "picture":"https://gradeatree.com/wp-content/uploads/2016/06/Tree_planting_001-1.jpg",
       "points": 20,
